Core: Bugfix abstract VaultService - Pipelines: Bugfix Configmap vault integration

--- a/Security/Base/vault/src/Dockerfile
+++ b/Security/Base/vault/src/Dockerfile
@@ -14,7 +14,7 @@ LABEL org.opencontainers.image.authors="Sindria Inc. <info@sindria.org>"
 LABEL \
 	name="vault" \
 	image="sindriainc/vault" \
-	tag="\${TAG_VERSION}-\${TAG_SUFFIX}" \
+	tag="${TAG_VERSION}-${TAG_SUFFIX}" \
 	vendor="sindria"
 
 ENV TZ=${TIMEZONE}
