--- a/.github/workflows/core-base-nginxphp-localsuitecrm.yml
+++ b/.github/workflows/core-base-nginxphp-localsuitecrm.yml
@@ -1,16 +1,16 @@
-name: BaseImages CI NginxPHP Local
+name: Core Base NginxPHP LocalSuiteCRM
 
 on:
   push:
     branches:
       - 'master'
     paths:
-      - BaseImages/nginx-php/local/**/*.*
-      - .github/workflows/baseimages-ci-nginxphp-local.yml
+      - Core/Base/nginx-php/local-suitecrm/**/*.*
+      - .github/workflows/core-base-nginxphp-localsuitecrm.yml
 
 defaults:
   run:
-    working-directory: BaseImages/nginx-php/local
+    working-directory: Core/Base/nginx-php/local-suitecrm
 
 jobs:
   build_publish:
@@ -18,7 +18,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set env release
-      run: echo "RELEASE_VERSION=7.0.0-local" >> $GITHUB_ENV
+      run: echo "RELEASE_VERSION=7.1.0-local-suitecrm" >> $GITHUB_ENV
     - name: Set env slug
       run: echo "REPO_SLUG=nginx-php" >> $GITHUB_ENV
     - uses: docker/setup-qemu-action@v2
