setup remote env

--- a/Products/XPipe/V1/xpipe-v1-web-portal/.env.local
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/.env.local
@@ -125,6 +125,11 @@ PIPELINES_COLLECTOR_ADMIN_USERNAME=carbon.user
 PIPELINES_COLLECTOR_ADMIN_PASSWORD=admin123
 PIPELINES_CONFIGMAP_VAULT_BASE_URL=https://dev-vault-xpipe.sindria.org
 PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN=
+PIPELINES_CONFIGMAP_VAULT_UNSEAL_KEY_1=
+PIPELINES_CONFIGMAP_VAULT_UNSEAL_KEY_2=
+PIPELINES_CONFIGMAP_VAULT_UNSEAL_KEY_3=
+PIPELINES_CONFIGMAP_VAULT_UNSEAL_KEY_4=
+PIPELINES_CONFIGMAP_VAULT_UNSEAL_KEY_5=
 PIPELINES_TEMPLATE_CATALOG_ACCESS_TOKEN=secret
 PIPELINES_ORCHESTRATOR_ACCESS_TOKEN=secret
 
