--- a/Products/XPipe/V1/xpipe-v1-web-portal/docker-compose.local.yml
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/docker-compose.local.yml
@@ -51,6 +51,11 @@ services:
       - PIPELINES_COLLECTOR_ADMIN_PASSWORD=${PIPELINES_COLLECTOR_ADMIN_PASSWORD}
       - PIPELINES_CONFIGMAP_VAULT_BASE_URL=${PIPELINES_CONFIGMAP_VAULT_BASE_URL}
       - PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN=${PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN}
+      - PIPELINES_CONFIGMAP_VAULT_UNSEAL_KEY_1=${PIPELINES_CONFIGMAP_VAULT_UNSEAL_KEY_1}
+      - PIPELINES_CONFIGMAP_VAULT_UNSEAL_KEY_2=${PIPELINES_CONFIGMAP_VAULT_UNSEAL_KEY_2}
+      - PIPELINES_CONFIGMAP_VAULT_UNSEAL_KEY_3=${PIPELINES_CONFIGMAP_VAULT_UNSEAL_KEY_3}
+      - PIPELINES_CONFIGMAP_VAULT_UNSEAL_KEY_4=${PIPELINES_CONFIGMAP_VAULT_UNSEAL_KEY_4}
+      - PIPELINES_CONFIGMAP_VAULT_UNSEAL_KEY_5=${PIPELINES_CONFIGMAP_VAULT_UNSEAL_KEY_5}
       - PIPELINES_TEMPLATE_CATALOG_ACCESS_TOKEN=${PIPELINES_TEMPLATE_CATALOG_ACCESS_TOKEN}
       - PIPELINES_ORCHESTRATOR_ACCESS_TOKEN=${PIPELINES_ORCHESTRATOR_ACCESS_TOKEN}
       # Lab envs
