--- a/IaC/xpipe-dorjecurreli/xpipe-v1-web-portal/deployment.yaml
+++ b/IaC/xpipe-dorjecurreli/xpipe-v1-web-portal/deployment.yaml
@@ -25,30 +25,37 @@ spec:
       imagePullSecrets:
       - name: sindria-dockerhub
       initContainers:
-        - name: init-static
+        - name: init-jetbrains
           image: busybox
-          command: [ "sh", "-c", "chown -R 1000:1000 /var/www/app/pub/static" ]
+          command: [ "sh", "-c", "chown -R 1000:1000 /home/sindria/.cache/JetBrains" ]
           volumeMounts:
-            - mountPath: /var/www/app/pub/static
-              name: xpipe-v1-web-portal-static-volume
-        - name: init-media
-          image: busybox
-          command: [ "sh", "-c", "chown -R 1000:1000 /var/www/app/pub/media" ]
-          volumeMounts:
-            - mountPath: /var/www/app/pub/media
-              name: xpipe-v1-web-portal-media-volume
-        - name: init-generated
-          image: busybox
-          command: [ "sh", "-c", "chown -R 1000:1000 /var/www/app/generated" ]
-          volumeMounts:
-            - mountPath: /var/www/app/generated
-              name: xpipe-v1-web-portal-generated-volume
-        - name: init-var
-          image: busybox
-          command: [ "sh", "-c", "chown -R 1000:1000 /var/www/app/var" ]
-          volumeMounts:
-            - mountPath: /var/www/app/var
-              name: xpipe-v1-web-portal-var-volume
+            - mountPath: /home/sindria/.cache/JetBrains
+              name: xpipe-jetbrains-cache-volume
+
+#        - name: init-static
+#          image: busybox
+#          command: [ "sh", "-c", "chown -R 1000:1000 /var/www/app/pub/static" ]
+#          volumeMounts:
+#            - mountPath: /var/www/app/pub/static
+#              name: xpipe-v1-web-portal-static-volume
+#        - name: init-media
+#          image: busybox
+#          command: [ "sh", "-c", "chown -R 1000:1000 /var/www/app/pub/media" ]
+#          volumeMounts:
+#            - mountPath: /var/www/app/pub/media
+#              name: xpipe-v1-web-portal-media-volume
+#        - name: init-generated
+#          image: busybox
+#          command: [ "sh", "-c", "chown -R 1000:1000 /var/www/app/generated" ]
+#          volumeMounts:
+#            - mountPath: /var/www/app/generated
+#              name: xpipe-v1-web-portal-generated-volume
+#        - name: init-var
+#          image: busybox
+#          command: [ "sh", "-c", "chown -R 1000:1000 /var/www/app/var" ]
+#          volumeMounts:
+#            - mountPath: /var/www/app/var
+#              name: xpipe-v1-web-portal-var-volume
       containers:
       - env:
         - name: XPIPE_CORE_ECOMMERCE_CDN_STATIC
@@ -106,126 +113,126 @@ spec:
           valueFrom:
             secretKeyRef:
               key: CORE_NOTIFICATIONS_ACCESS_TOKEN
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         - name: CORE_GITHUB_ACCESS_TOKEN
           valueFrom:
             secretKeyRef:
               key: CORE_GITHUB_ACCESS_TOKEN
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         # Fnd Secrets
         - name: FND_COLLECTOR_ADMIN_USERNAME
           valueFrom:
             secretKeyRef:
               key: FND_COLLECTOR_ADMIN_USERNAME
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         - name: FND_COLLECTOR_ADMIN_PASSWORD
           valueFrom:
             secretKeyRef:
               key: FND_COLLECTOR_ADMIN_PASSWORD
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         - name: FND_NOTIFICATIONS_ACCESS_TOKEN
           valueFrom:
             secretKeyRef:
               key: FND_NOTIFICATIONS_ACCESS_TOKEN
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         - name: FND_IDENTITY_SERVER_ACCESS_TOKEN
           valueFrom:
             secretKeyRef:
               key: FND_IDENTITY_SERVER_ACCESS_TOKEN
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         - name: FND_GATEWAY_ACCESS_TOKEN
           valueFrom:
             secretKeyRef:
               key: FND_GATEWAY_ACCESS_TOKEN
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         # Iam Secrets
         - name: IAM_COLLECTOR_ADMIN_USERNAME
           valueFrom:
             secretKeyRef:
               key: IAM_COLLECTOR_ADMIN_USERNAME
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         - name: IAM_COLLECTOR_ADMIN_PASSWORD
           valueFrom:
             secretKeyRef:
               key: IAM_COLLECTOR_ADMIN_PASSWORD
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         - name: IAM_USERS_ACCESS_TOKEN
           valueFrom:
             secretKeyRef:
               key: IAM_USERS_ACCESS_TOKEN
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         - name: IAM_USERS_META_ACCESS_TOKEN
           valueFrom:
             secretKeyRef:
               key: IAM_USERS_META_ACCESS_TOKEN
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         - name: IAM_GROUPS_ACCESS_TOKEN
           valueFrom:
             secretKeyRef:
               key: IAM_GROUPS_ACCESS_TOKEN
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         - name: IAM_POLICIES_ACCESS_TOKEN
           valueFrom:
             secretKeyRef:
               key: IAM_POLICIES_ACCESS_TOKEN
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         # Pipelines Secrets
         - name: PIPELINES_COLLECTOR_ADMIN_USERNAME
           valueFrom:
             secretKeyRef:
               key: PIPELINES_COLLECTOR_ADMIN_USERNAME
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         - name: PIPELINES_COLLECTOR_ADMIN_PASSWORD
           valueFrom:
             secretKeyRef:
               key: PIPELINES_COLLECTOR_ADMIN_PASSWORD
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         - name: PIPELINES_CONFIGMAP_VAULT_BASE_URL
           valueFrom:
             secretKeyRef:
               key: PIPELINES_CONFIGMAP_VAULT_BASE_URL
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         - name: PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN
           valueFrom:
             secretKeyRef:
               key: PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         - name: PIPELINES_TEMPLATE_CATALOG_ACCESS_TOKEN
           valueFrom:
             secretKeyRef:
               key: PIPELINES_TEMPLATE_CATALOG_ACCESS_TOKEN
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         - name: PIPELINES_ORCHESTRATOR_ACCESS_TOKEN
           valueFrom:
             secretKeyRef:
               key: PIPELINES_ORCHESTRATOR_ACCESS_TOKEN
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         # Lab Secrets
         - name: LAB_COLLECTOR_ADMIN_USERNAME
           valueFrom:
             secretKeyRef:
               key: LAB_COLLECTOR_ADMIN_USERNAME
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         - name: LAB_COLLECTOR_ADMIN_PASSWORD
           valueFrom:
             secretKeyRef:
               key: LAB_COLLECTOR_ADMIN_PASSWORD
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         - name: LAB_CONFIGMAP_VAULT_ACCESS_TOKEN
           valueFrom:
             secretKeyRef:
               key: LAB_CONFIGMAP_VAULT_ACCESS_TOKEN
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         - name: LAB_SHELL_CATALOG_ACCESS_TOKEN
           valueFrom:
             secretKeyRef:
               key: LAB_SHELL_CATALOG_ACCESS_TOKEN
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
         - name: LAB_ORCHESTRATOR_ACCESS_TOKEN
           valueFrom:
             secretKeyRef:
               key: LAB_ORCHESTRATOR_ACCESS_TOKEN
-              name: xpipe-v1-web-portal-config
+              name: xpipe-v1-web-portal-secret
 
 
 
@@ -285,6 +292,8 @@ spec:
         ports:
         - containerPort: 80
           protocol: TCP
+        - containerPort: 2222
+          protocol: TCP
         #readinessProbe:
         #  failureThreshold: 3
         #  httpGet:
@@ -303,34 +312,49 @@ spec:
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         volumeMounts:
-        - mountPath: /var/www/app/pub/static
-          name: xpipe-v1-web-portal-static-volume
-        - mountPath: /var/www/app/pub/media
-          name: xpipe-v1-web-portal-media-volume
-        - mountPath: /var/www/app/generated
-          name: xpipe-v1-web-portal-generated-volume
-        - mountPath: /var/www/app/var
-          name: xpipe-v1-web-portal-var-volume
+        - mountPath: /home/sindria/.cache/JetBrains
+          name: xpipe-jetbrains-cache-volume
+        - mountPath: /var/www/app
+          name: xpipe-monorepo-codebase-volume
+          #subPath: Products/XPipe/V1/xpipe-v1-web-portal/src
+
+#        - mountPath: /var/www/app/pub/static
+#          name: xpipe-v1-web-portal-static-volume
+#        - mountPath: /var/www/app/pub/media
+#          name: xpipe-v1-web-portal-media-volume
+#        - mountPath: /var/www/app/generated
+#          name: xpipe-v1-web-portal-generated-volume
+#        - mountPath: /var/www/app/var
+#          name: xpipe-v1-web-portal-var-volume
       dnsPolicy: ClusterFirst
       #hostNetwork: true
       restartPolicy: Always
       schedulerName: default-scheduler
       terminationGracePeriodSeconds: 30
       volumes:
-      - name: xpipe-v1-web-portal-static-volume
+      - name: xpipe-monorepo-codebase-volume
         persistentVolumeClaim:
-          claimName: xpipe-v1-web-portal-static-pvc
+          claimName: xpipe-monorepo-codebase-pvc
           #defaultMode: 420
-      - name: xpipe-v1-web-portal-media-volume
+      - name: xpipe-jetbrains-cache-volume
         persistentVolumeClaim:
-          claimName: xpipe-v1-web-portal-media-pvc
+          claimName: xpipe-jetbrains-cache-pvc
           #defaultMode: 420
-      - name: xpipe-v1-web-portal-generated-volume
-        persistentVolumeClaim:
-          claimName: xpipe-v1-web-portal-generated-pvc
-          #defaultMode: 420
-      - name: xpipe-v1-web-portal-var-volume
-        persistentVolumeClaim:
-          claimName: xpipe-v1-web-portal-var-pvc
-          #defaultMode: 420
+
+#      - name: xpipe-v1-web-portal-static-volume
+#        persistentVolumeClaim:
+#          claimName: xpipe-v1-web-portal-static-pvc
+#          #defaultMode: 420
+#      - name: xpipe-v1-web-portal-media-volume
+#        persistentVolumeClaim:
+#          claimName: xpipe-v1-web-portal-media-pvc
+#          #defaultMode: 420
+#      - name: xpipe-v1-web-portal-generated-volume
+#        persistentVolumeClaim:
+#          claimName: xpipe-v1-web-portal-generated-pvc
+#          #defaultMode: 420
+#      - name: xpipe-v1-web-portal-var-volume
+#        persistentVolumeClaim:
+#          claimName: xpipe-v1-web-portal-var-pvc
+#          #defaultMode: 420
 ---
